app/src/db/repositories/gram_type/snapshots/anki_sentences__db__repositories__gram_type__gram_type_test__test_gram_type_repo__bulk_insert__run_bulk_insert_update_scenario-2.snap
---
source: app/src/db/repositories/gram_type/gram_type_test.rs
expression: res_1
---
[
    Snapshot {
        id: 1,
        code: "123",
        name: "456",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
    Snapshot {
        id: 2,
        code: "987",
        name: "654",
        created_at: "<created_at>",
        deleted_at: "<deleted_at>",
    },
]
